--- a/providers/dev/buildspec.yml
+++ b/providers/dev/buildspec.yml
@@ -32,7 +32,7 @@ phases:
 
       - cd ${CODEBUILD_SRC_DIR} 
       - eco ${TAG}
-      - terragrunt plan --terragrunt-working-dir providers/dev/cluster/ -var="image_tag"="$ECR_URL:${TAG}" -no-color -input=false -out plan.out
+      - terragrunt plan --terragrunt-working-dir providers/dev/cluster/ -var="image_tag"="${TAG}" -no-color -input=false -out plan.out
       - terragrunt apply --terragrunt-working-dir providers/dev/cluster/ -auto-approve -no-color -input=false plan.out
       #- terragrunt apply --terragrunt-working-dir providers/dev/cluster/  -var="image_tag=${TAG}" -auto-approve 
 
