--- a/providers/dev/buildspec.yml
+++ b/providers/dev/buildspec.yml
@@ -15,25 +15,25 @@ phases:
       - cd "${CODEBUILD_SRC_DIR}/app"
       - export TAG="${CODEBUILD_RESOLVED_SOURCE_VERSION}-${ENV}"
       - echo "Building version ${TAG}"
-      - curl -sSL "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip" -o terraform.zip
-      - unzip terraform.zip -d /usr/local/bin && chmod +x /usr/local/bin/terraform
-      - curl -sSL https://github.com/gruntwork-io/terragrunt/releases/download/v${TERRAGRUNT_VERSION}/terragrunt_linux_amd64 -o terragrunt
-      - mv terragrunt /usr/local/bin/ && chmod +x /usr/local/bin/terragrunt
+      #- curl -sSL "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip" -o terraform.zip
+      #- unzip terraform.zip -d /usr/local/bin && chmod +x /usr/local/bin/terraform
+      #- curl -sSL https://github.com/gruntwork-io/terragrunt/releases/download/v${TERRAGRUNT_VERSION}/terragrunt_linux_amd64 -o terragrunt
+      #- mv terragrunt /usr/local/bin/ && chmod +x /usr/local/bin/terragrunt
  
 
       
   build:
     commands:
       - cd "${CODEBUILD_SRC_DIR}/app"
-      - aws ecr get-login-password --region $( echo $ECR_URL| awk -F"." '{print $4}') | docker login --username AWS --password-stdin $(echo $ECR_URL| grep -o '[^"]*com')
-      - docker build  -t  "$ECR_URL:${TAG}" .
-      - docker push "$ECR_URL:${TAG}" 
-      - echo Build started on `date`
+      #- aws ecr get-login-password --region $( echo $ECR_URL| awk -F"." '{print $4}') | docker login --username AWS --password-stdin $(echo $ECR_URL| grep -o '[^"]*com')
+      #- docker build  -t  "$ECR_URL:${TAG}" .
+      #- docker push "$ECR_URL:${TAG}" 
+      #- echo Build started on `date`
 
       - cd ${CODEBUILD_SRC_DIR} 
-      
-      - terragrunt plan --terragrunt-working-dir providers/dev/cluster/ -var="image_tag"="${TAG}" -no-color -input=false -out plan.out
-      - terragrunt apply --terragrunt-working-dir providers/dev/cluster/ -auto-approve -no-color -input=false plan.out
+      - cat modules/cluster/ecs.tf
+      #- terragrunt plan --terragrunt-working-dir providers/dev/cluster/ -var="image_tag"="${TAG}" -no-color -input=false -out plan.out
+      #- terragrunt apply --terragrunt-working-dir providers/dev/cluster/ -auto-approve -no-color -input=false plan.out
       #- terragrunt apply --terragrunt-working-dir providers/dev/cluster/  -var="image_tag=${TAG}" -auto-approve 
 
 
